--- a/src/app/monitoreo/monitoreo-create/monitoreo-create.component.scss
+++ b/src/app/monitoreo/monitoreo-create/monitoreo-create.component.scss
@@ -1,6 +1,6 @@
 
 .frame {
-  position: relative;
+  position: sticky;
   left: 25%;
   width: 300px;
   height: 300px;
@@ -108,11 +108,26 @@
 }
 
 .content {
-  height: calc(100vh - 98px);
+  height: calc(45vh - 98px);
   border-radius: 10px;
   margin: 16px;
   margin-left: 32px;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
   font-size: 2rem;
   color: lightgray;
+}
+
+.divCont{
+  display: flex;
+}
+
+h1{
+  color: black;
+  margin: 16px;
+}
+span{
+  color: black;
 }
