--- a/src/app/monitoreo/monitoreo-create/monitoreo-create.component.scss
+++ b/src/app/monitoreo/monitoreo-create/monitoreo-create.component.scss
@@ -1,9 +1,10 @@
 
 .frame {
+  // background-color: aqua;
   position: sticky;
   left: 25%;
   width: 300px;
-  height: 300px;
+  height: 220px;
   border-radius: 2px;
   overflow: hidden;
   font-family: 'Open Sans', Helvetica, sans-serif;
@@ -108,7 +109,7 @@
 }
 
 .content {
-  height: calc(45vh - 98px);
+  height: calc(45vh - 50px);
   border-radius: 10px;
   margin: 16px;
   margin-left: 32px;
