Validacion de acceso del usuario por token a pagina Registros

--- a/src/app/monitoreo/monitoreo-registros/monitoreo-registros.component.html
+++ b/src/app/monitoreo/monitoreo-registros/monitoreo-registros.component.html
@@ -1,1 +1,5 @@
 <p>monitoreo-registros works!</p>
+
+<div class="col-md-12 d-flex justify-content-center mt-5">
+  <button type="button" class="btn btn-primary" id="btnLogin" (click)="authService.cerrarSesion();">Cerrar Session</button>
+</div>
