--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -18,7 +18,7 @@
         <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="developer_board"></mat-icon>
         <span>Monitoreo</span>
       </button>
-      <button [routerLink]="['monitoreo/login']" mat-button class="menu-button">
+      <button [routerLink]="['monitoreo/registros']" mat-button class="menu-button">
         <mat-icon>equalizer</mat-icon>
         <span>Registros</span>
       </button>
