--- a/src/app/monitoreo/monitoreo-login/monitoreo-login.component.html
+++ b/src/app/monitoreo/monitoreo-login/monitoreo-login.component.html
@@ -17,7 +17,7 @@
       <br>
       <label for="alert" style="color: red;">{{AlertUser}}</label>
       <div class="col-md-12 d-flex justify-content-center mt-5">
-        <button type="button" class="btn btn-primary" id="btnLogin" (click)="login();">Login</button>
+        <button type="button" class="btn btn-primary" id="btnLogin" (click)="login();">Iniciar Session</button>
       </div>
     </div>
   </div>
