Colocacion de graficas.

--- a/src/app/monitoreo/monitoreo-create/monitoreo-create.component.html
+++ b/src/app/monitoreo/monitoreo-create/monitoreo-create.component.html
@@ -1,6 +1,6 @@
 <div class="col-md-6 offset-md-3">
   <div class="content mat-elevation-z8 justify-content-center">
-    <span>Temperatura</span>
+    <span>Temperaturas actuales</span>
     <div class="container1">
       <div class="frame">
         <div class="center">
@@ -35,7 +35,8 @@
     </div>
   </div>
   <div class="content mat-elevation-z8 justify-content-center">
-    <span>Conteo de pollos</span>
+    <span>Conteo de pollos del dia de hoy</span>
+    <br>
     <div class="divCont">
       <div class="contadores">
         <h1>Conteo 1: {{Contador1}}</h1><span></span>
