--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -21,6 +21,10 @@
       <button [routerLink]="['monitoreo/registros']" mat-button class="menu-button">
         <mat-icon>equalizer</mat-icon>
         <span>Registros</span>
+      </button >
+      <button mat-button (click)="close()" class="menu-button" [disabled]="botonDesactivado" [hidden]="botonDesactivado">
+        <mat-icon>logout</mat-icon>
+        <span>Cerrar session</span>
       </button>
     </mat-nav-list>
   </mat-sidenav>
