Cambio de IP local

--- a/src/app/monitoreo/monitoreo-conteo/monitoreo-conteo.component.html
+++ b/src/app/monitoreo/monitoreo-conteo/monitoreo-conteo.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-8 offset-md-2">
+<div class="col-md-10 offset-md-1">
   <div class="content mat-elevation-z8 justify-content-center">
     <div>
       <label class="mt-2 d-flex justify-content-center" for="alert" style="color: red; font-size: medium;">{{AlertSearch}}</label>
@@ -11,7 +11,9 @@
           <button type="button" class="btn btn-primary" (click)="DatosConteo()">Buscar Conteo</button><br>
         </div>
       </form>
-      <canvas id="ctx" width="80" height="20"></canvas>
+      <div >
+        <canvas id="ctx" width="80" height="30" ></canvas>
+      </div>
     </div>
   </div>
 </div>
