--- a/src/app/monitoreo/monitoreo-registros/monitoreo-registros.component.scss
+++ b/src/app/monitoreo/monitoreo-registros/monitoreo-registros.component.scss
@@ -1,5 +1,14 @@
 .content {
-  height: calc(80vh - 98px);
+  height: calc(53vh - 98px);
+  border-radius: 10px;
+  margin: 16px;
+  margin-left: 32px;
+  font-size: 2rem;
+  color: lightgray;
+}
+
+.content2 {
+  height: calc(50vh - 98px);
   border-radius: 10px;
   margin: 16px;
   margin-left: 32px;
