--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -12,7 +12,7 @@
 </mat-toolbar>
 
 <mat-sidenav-container class="example-container">
-  <mat-sidenav #sidenav opened="false" mode="side">
+  <mat-sidenav #sidenav opened="false">
     <mat-nav-list>
       <button [routerLink]="['monitoreo/inicio']" mat-button class="menu-button">
         <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="developer_board"></mat-icon>
