--- a/src/app/monitoreo/monitoreo-registros/monitoreo-registros.component.html
+++ b/src/app/monitoreo/monitoreo-registros/monitoreo-registros.component.html
@@ -1,18 +1,33 @@
 
 <div class="col-md-8 offset-md-2">
+  <div style="text-align: center;">
+    <h1>Temperaturas</h1>
+  </div>
+  
   <div class="content mat-elevation-z8 justify-content-center">
     <div>
       <label class="mt-2 d-flex justify-content-center" for="alert" style="color: red; font-size: medium;">{{AlertSearch}}</label>
       <form [formGroup]="formulario">
-        <div class="mt-2 d-flex justify-content-center">
-          <label class="lblfecha" for="fechaInicio">Fecha inicio</label>
-          <input class="txtfecha" type="date" formControlName="fechaInicio">
-          <label class="lblfecha" for="fechaFin">Fecha final</label>
-          <input class="txtfecha" type="date" formControlName="fechaFin">
-          <button type="button" class="btn btn-primary" (click)="DatosTemperatura()">Buscar Temperatura</button><br>
+        <div class="mt-1 d-flex align-items-center justify-content-center">
+          <label for="fechaInicio" class="lblfecha mt-2" style="width: 110px; text-align: center;">Fecha inicio</label>
+          <input type="date" formControlName="fechaInicio" class="form-control mt-2" style="width: 180px;">
+        
+          <label for="fechaFin" class="lblfecha mt-2" style="width: 110px; text-align: center;">Fecha final</label>
+          <input type="date" formControlName="fechaFin" class="form-control mt-2" style="width: 180px;">
+        
+          <div class="mt-3" style="margin-left: 10px;"> <!-- Margen superior adicional para bajar el botón -->
+            <button type="button" class="btn btn-primary" (click)="DatosTemperatura()">Buscar</button>
+          </div>
         </div>
+        
       </form>
-      <canvas id="Tempctx" width="80" height="40"></canvas>
+      <canvas id="ctxTemp-1" width="150" height="40"></canvas>
+    </div>
+  </div>
+  <div class="content2 mat-elevation-z8 justify-content-center">
+    <div>
+      <br>
+      <canvas id="ctxTemp-2" width="150" height="40"></canvas>
     </div>
   </div>
 </div>
